# PCL-CGRE

./: CMakeLists.txt  README.md
.github/workflows/: build-linux.yml  build-windows.yml
.omo/run-continuation/: ses_11737b6e1ffe6UohmZv2ZSr01S.json  ses_117538a4dffeUGHvBGsYbe398s.json
data/ui/: help_support.blp  launch_right.blp  launch_sidebar.blp  page_setup_about.blp  page_setup_game_manage.blp  page_setup_java.blp  page_setup_language.blp  page_setup_launch.blp  page_setup_misc.blp  page_setup_ui.blp  page_setup_update.blp  settings_placeholder.blp  skin.blp  tools.blp
libpclcore/: CMakeLists.txt
scripts/: build.sh
src/cli/: CliCommands.cpp
src/pcl-cgre/: CMakeLists.txt
src/pcl-cgre/app/: HeaderSetup.cpp  HeaderSetup.hpp  MainWindow.cpp  NavigationController.cpp  NavigationController.hpp  NotificationSetup.cpp  NotificationSetup.hpp  PageAssembler.cpp  PageAssembler.hpp  WindowControls.cpp  WindowControls.hpp  WindowShell.cpp  WindowShell.hpp
src/pcl-cgre/core/: ConfigEvent.cpp  ConfigEvent.hpp  ConfigManager.cpp  ConfigManager.hpp  PluginRegistry.cpp  PluginRegistry.hpp
src/pcl-cgre/network/: HttpUtil.hpp  McVersionFetcher.cpp  ResourceFetcher.cpp
src/pcl-cgre/pages/: DownloadPage.cpp  McVersionDetailPage.cpp  MorePage.cpp  PageAbout.cpp  PageAbout.hpp  PageFeedback.cpp  PageFeedback.hpp  PageGameManage.cpp  PageGameManage.hpp  PageJavaMgmt.cpp  PageJavaMgmt.hpp  PageLanguage.cpp  PageLanguage.hpp  PageLaunchSet.cpp  PageLaunchSet.hpp  PageLog.cpp  PageLog.hpp  PageMisc.cpp  PageMisc.hpp  PageUI.cpp  PageUI.hpp  PageUpdate.cpp  PageUpdate.hpp  ResourceDetailPage.cpp  SettingsPage.cpp  SettingsPage.hpp
src/pcl-cgre/util/: FontHelper.cpp  IconHelper.cpp
src/pcl-cgre/widgets/: FormWidgets.cpp  FormWidgets.hpp  NotificationDrawer.cpp  NotificationToast.cpp
